--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./script/index.js",
-    "dev": "nodemon ./script/index.js"
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "knex": "^0.14.2",
-    "nodemon": "^1.14.12",
     "pg": "^7.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
